src/snapshots/loco_rs__doctor__tests__doctor_all_resources_should_pass.snap
---
source: src/doctor.rs
expression: run_all(&config).await
---
{
    SeaOrmCLI: Check {
        status: Ok,
        message: "SeaORM CLI is installed",
        description: None,
    },
    Database: Check {
        status: Ok,
        message: "DB connection: success",
        description: None,
    },
    Redis: Check {
        status: Ok,
        message: "Redis connection: success",
        description: None,
    },
}
