src/snapshots/loco_rs__doctor__tests__redis_should_fail.snap
---
source: src/doctor.rs
expression: run_all(&config).await
---
{
    SeaOrmCLI: Check {
        status: Ok,
        message: "SeaORM CLI is installed",
        description: None,
    },
    Database: Check {
        status: Ok,
        message: "DB connection: success",
        description: None,
    },
    Redis: Check {
        status: NotOk,
        message: "Redis connection: failed",
        description: Some(
            "Timed out in bb8",
        ),
    },
}
